# practical-deep-learning-for-coders

./: .gitignore  pyproject.toml
lessons/1/: notebook.ipynb
lessons/1/coffee_or_tea/coffee/: 76ae21f7-e5cb-4158-83de-ee5ab40af80b.jpg!d
lessons/2/: model.pkl  notebook.ipynb
lessons/3/: README.md  app.py
