[project]
name = "yupiter-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.0.1",
    "fastai>=2.8.1",
    "fastcore>=1.8.2",
    "fastdownload>=0.0.7",
    "gradio>=5.29.0",
    "jupyter>=1.1.1",
]
